# openjardin

./: .gitignore  A_LIRE.TXT  CMakeLists.txt  consts.cpp  consts.h  jardin.sqli  jardin.xml  jardin_exemple.xml  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  open-jardin.pro  openjardin.qrc  shell.nix
dialogs/: configuration.cpp  configuration.h  configuration.ui  cultures.cpp  cultures.h  cultures.ui  detail_parcelle.cpp  detail_parcelle.h  detail_parcelle.ui  dialog_aide.cpp  dialog_aide.h  dialog_aide.ui  dialog_ajout_moyen.cpp  dialog_ajout_moyen.h  dialog_ajout_moyen.ui  dialog_ajout_ressource.cpp  dialog_ajout_ressource.h  dialog_ajout_ressource.ui  dialog_coordonnees.cpp  dialog_coordonnees.h  dialog_coordonnees.ui  dialog_moyens.cpp  dialog_moyens.h  dialog_moyens.ui  dialog_ressources.cpp  dialog_ressources.h  dialog_ressources.ui  dialog_taches.cpp  dialog_taches.h  dialog_taches.ui  dialog_type_de_moyen.cpp  dialog_type_de_moyen.h  dialog_type_de_moyen.ui  dialog_type_de_tache.cpp  dialog_type_de_tache.h  dialog_type_de_tache.ui  dialogrequetefamille.cpp  dialogrequetefamille.h  dialogrequetefamille.ui  fiche_plantes.cpp  (+14 more)
graphic/: background.cpp  background.h  cote.cpp  cote.h  fonditem.cpp  fonditem.h  mybutton.cpp  mybutton.h  mygraphicsscene.cpp  mygraphicsscene.h  mygrilleitem.cpp  mygrilleitem.h  myitem.cpp  myitem.h  mypolygone.cpp  mypolygone.h  mypolyline.cpp  mypolyline.h  mytreewidgetitem.cpp  mytreewidgetitem.h  myvertex.cpp  myvertex.h  parcelleitem.cpp  parcelleitem.h  planning_item.cpp  planning_item.h  sommet.cpp  sommet.h  tache_item.cpp  tache_item.h  vignette.cpp  vignette.h
help/: gnu_gpl-en.txt  gnu_gpl-fr.txt
images/: .directory
images/icones/: .directory
modeles/: parcelle.cpp  parcelle.h
sql/: planner.sql  restore.sql  restore_en.sql
translations/: open-jardin_en.qm  open-jardin_en.ts  open-jardin_es.ts  open-jardin_fr.qm  open-jardin_fr.ts  open-jardin_it.qm  open-jardin_it.ts
utilitaires/: util.cpp  util.h
